<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/backHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/back_list"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xsmall"
        app:layout_constraintBottom_toBottomOf="@+id/backHome"
        app:layout_constraintStart_toEndOf="@+id/backHome"
        app:layout_constraintTop_toTopOf="@+id/backHome" />

    <ImageView
        android:id="@+id/imageBig"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        app:cardBackgroundColor="@color/cardView"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/genre"
                app:layout_constraintEnd_toStartOf="@id/favButton"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/genre"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toTopOf="@+id/year"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toTopOf="@id/ratingImageView"
                app:layout_constraintStart_toStartOf="@id/genre"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="@id/ratingImageView"
                app:layout_constraintStart_toEndOf="@id/ratingImageView"
                app:layout_constraintTop_toTopOf="@id/ratingImageView" />

            <ImageView
                android:id="@+id/ratingImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintStart_toStartOf="@id/year"
                app:layout_constraintTop_toBottomOf="@id/year"
                app:srcCompat="@drawable/rating_star" />

            <TextView
                android:id="@+id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:text="@string/description_header"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/description"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/descriptionHeader"
                app:layout_constraintTop_toBottomOf="@id/descriptionHeader" />

            <TextView
                android:id="@+id/imdbLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/imdbLink"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <Button
                android:id="@+id/favButton"
                android:layout_width="@dimen/margin_xlarge"
                android:layout_height="@dimen/margin_xlarge"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/popcorn_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>