<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.SignUpFragment">

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toTopOf="@+id/SignUpCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/SignUpCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        app:cardBackgroundColor="@color/cardView"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/signUpName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginEnd="@dimen/margin_xlarge"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/padding_small"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="@dimen/padding_small"
                app:layout_constraintBottom_toTopOf="@+id/signUpSurname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/signUpSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/padding_small"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="text"
                android:paddingStart="@dimen/padding_small"
                app:layout_constraintBottom_toTopOf="@+id/signUpEmail"
                app:layout_constraintEnd_toEndOf="@+id/signUpName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/signUpName"
                app:layout_constraintTop_toBottomOf="@+id/signUpName" />

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_small"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/padding_small"
                app:layout_constraintBottom_toTopOf="@+id/signUpPassword"
                app:layout_constraintEnd_toEndOf="@+id/signUpSurname"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/signUpSurname"
                app:layout_constraintTop_toBottomOf="@+id/signUpSurname" />

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/padding_small"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/padding_small"
                app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
                app:layout_constraintEnd_toEndOf="@+id/signUpEmail"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/signUpEmail"
                app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:layout_marginBottom="@dimen/margin_xlarge"
                android:background="@drawable/custom_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:padding="@dimen/padding_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/signUpPassword"
                app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>